[project]
name = "pythonha3frolov"
version = "0.1.0"
description = "my thoughts, just thoughts..."
authors = [
    {name = "Anatolii Frolov"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alpaca (>=1.0.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "vectorbt (>=0.27.3,<0.28.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "lightgbm (>=4.6.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
